# 123456btc-node

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  README_ar.md  README_fa.md  README_fr.md  README_my.md  README_zh.md  SECURITY.md  docker-compose.yml  git.sh  package-lock.json  package.json  vitest.config.ts
contracts/: .gitignore  .mocharc.yml  Anchor.toml  Cargo.toml  DEPLOY.md  package-lock.json  package.json  tsconfig.json
contracts/programs/: subscription_escrow
contracts/programs/agent_registry/: Cargo.toml
contracts/programs/agent_registry/src/: lib.rs
contracts/programs/bridge/: Cargo.toml
contracts/programs/bridge/src/: lib.rs
contracts/scripts/: deploy.sh  deploy.ts  setup.sh  verify.sh
contracts/tests/: agent.test.ts  blindbox.test.ts  blindbox_escrow.ts  bridge.ts  subscription_escrow.ts
docker/: nginx.conf
docs/: ARCHITECTURE.md  AUDIT_CHECKLIST.md  BRIDGE-TESTNET.md  CORE_MONEY_HOUSE.md  DISASTER_RECOVERY.md  ESCROW-DEPLOY.md  GO_TO_MARKET.md  MCP-INTEGRATION.md  ROADMAP_ENG.md  SIGNAL_STANDARD.md
frontend/: package-lock.json  package.json  tailwind.config.js
programs/subscription_escrow/: Anchor.toml  Cargo.toml
programs/subscription_escrow/src/: lib.rs
public/: index.html  inscribe.html
public/blindbox/: blindbox.css  blindbox.js  index.html
public/css/: style.css
public/js/: api.js  app.js  charts.js  wallet.js
scripts/: chaos-test.ts  deploy-contracts.sh  deploy-escrow.ts  deploy-testnet.sh  local-flow.sh  test-bridge-e2e.sh  test-e2e.sh  test-signal-push.sh  test-sqljs-undef.ts  test-sqljs.ts  update-program-ids.ts
src/: cli.ts
src/agent/: AgentIDManager.ts
src/api/: http.ts  shareCard.ts  ws.ts
src/blindbox/: BlindBoxOTC.ts  InscriptionForge.ts
src/bot/: telegram.ts
src/bridge/: config.ts  index.ts
src/container/: container.ts
src/core/: AuthManager.ts  AutoExecutionEngine.ts  (+9 more)
(+71 files in other folders)
