[package]
name = "subscription_escrow"
version = "0.1.0"
description = "123456btc-node Subscription Escrow — BBT token escrow with time-release and dispute arbitration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subscription_escrow"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
bytemuck = { version = "1.16", features = ["derive", "min_const_generics"] }
